added to landing page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code Quiz</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <button id="view-high-scores">View High Scores</button>
+        <h3>Timer</h3>
+    </header>
+
+    <main class="page-content" id="page-content">
+        <section class="text-content" id="text-content">
+            <h1 id="head-text">Coding Quiz Challenge</h1>
+            <p id="informative-text">Click Start to begin. With each incorrect question time will be deducted. Good Luck!</p>
+        </section>
+
+
+
+
+
+
+
+    </main>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
