loop of 5 questions with end screen

--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 <body>
     <header>
         <button id="view-high-scores">View High Scores</button>
-        <h3>Timer</h3>
+        <h3 id="timer">Timer</h3>
     </header>
 
-    <main class="page-content" id="page-content">
-        <section class="text-content" id="text-content">
-            <h1 id="head-text">Coding Quiz Challenge</h1>
-            <p id="informative-text">Click Start to begin. With each incorrect question time will be deducted. Good Luck!</p>
+    <main>
+        <section id="page-content">
+            
+            <h1 id="head-text" class="head-text">Coding Quiz Challenge</h1>
+
+            <p id="informative-text" class="informative-text">Click Start to begin. With each incorrect question time will be deducted. Good Luck!</p>
+
+            <div id="choices">
+                <button class="btn" id="buttons">Start</button>
+            </div>
+
         </section>
 
-
-
-
+        
 
 
 
