logging score to console

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 
     </main>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/testscript.js"></script>
 </body>
 </html>
