added high scores to local storage array

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <button id="view-high-scores">View High Scores</button>
+        <button id="view-high-scores"><a href="high-scores.html">View High Scores</a></button>
         <h3 id="timer">Timer</h3>
     </header>
 
@@ -32,6 +32,6 @@
 
     </main>
 
-    <script src="assets/js/testscript.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
