--- a/high-scores.html
+++ b/high-scores.html
@@ -13,7 +13,7 @@
     <main>
         <section id="page-content">
             
-            <h1 id="head-text" class="head-text">High Scores</h1>
+            <h1 id="head-text" class="head-text">Top 5 High Scores</h1>
 
             <div>
                 <ol id="ordered-list">
